# sf-voice-core

./: .env.example  .formatter.exs  .gitignore  .gitmodules  .workspace.exs  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  ERRORS.md  MEMORY.md  README.md  maven-signing-key.asc  mise.toml  mix.exs  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: caddy.yml  deploy-console.yml  ellie-ai.yml  frontend.yml  go-signoz.yml  pipeline.yml  preview.yml  publish-cpp-sdk.yml  publish-elixir-sdk.yml  publish-go-sdk.yml  publish-go-signoz-sdk.yml  publish-java-sdk.yml  publish-kotlin-sdk.yml  publish-python-sdk.yml  publish-rust-sdk.yml  publish-ts-sdk.yml  resto-booking-app.yml  sf-voice-api.yml  staging-migration.yml
.hex/: cache.ets  hex.config
apps/: ELIXIR_RULES.md  EXAMPLES.md  MEMORY.md
apps/chips/: .env.example  CMakeLists.txt  README.md
apps/chips/src/: main.cpp
apps/cohere/: .env.example  README.md  pyproject.toml
apps/cohere/sf_voice_py/: __init__.py  cli.py  config.py  demo.py
apps/ellie_ai/: .formatter.exs  AGENTS.md  CLAUDE.md  Dockerfile  MEMORY.md  README.md  mix.exs
apps/fifteenlabs/: .env.example  README.md  package.json  tsconfig.json
apps/fraud-prototype/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/livecart/: README.md  go.mod
apps/resto_booking_app/: .dockerignore  AGENTS.md  MEMORY.md  mix.exs
apps/sf-voice/: .env.example  README.md  build.gradle.kts  settings.gradle.kts
assets/css/: app.css
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  http.rs  main.rs  output.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
core/: TODO.md
core/backend/: .gitignore  AGENT.md  AGENTS.md  MEMORY.md  RUST_RULES.md  TODO.md
core/backend/api/: Cargo.toml  Dockerfile  Dockerfile.dockerignore
core/backend/api/migrations/: 0001_init.sql  0002_auth.sql
core/backend/api/src/: ai_models.rs  auth.rs  aws.rs  aws_creds.rs  cloudformation.rs  db.rs  diarize.rs  duckdb_schema.rs  encryption.rs  error.rs  events.rs  internal_bucket.rs  main.rs  middleware.rs  models.rs  openai.rs  slack.rs  state.rs  vad.rs  whisper.rs
core/backend/api/src/jobs/: ingest.rs  mod.rs  sandbox_stub.rs  transcribe.rs  transcribe_document.rs  youtube_ingest.rs
core/backend/api/src/routes/: admin.rs  auth.rs  bucket.rs  calls.rs  internal.rs  jobs.rs  me.rs  mod.rs  orgs.rs  slices.rs  team.rs
core/backend/bench/: Cargo.toml  README.md  docker-compose.yml
core/backend/entities/: Cargo.toml
core/backend/entities/src/: auth_identities.rs  calls.rs  chat_messages.rs  chat_threads.rs  documents.rs  embeddings.rs  invites.rs  jobs.rs  lib.rs  org_users.rs  orgs.rs  prompt_slices.rs  sessions.rs  transcripts.rs  users.rs
core/frontend/: .gitignore  AGENT.md  AGENTS.md  BRAND.md  Dockerfile  Dockerfile.dockerignore  MEMORY.md  index.html  nginx.conf  package.json  postcss.config.js  rspack.config.ts  tsconfig.json
core/inference/: .gitignore  pyproject.toml
core/inference/src/sf_voice_inference/: __init__.py
cpp/: CMakeLists.txt  README.md  conanfile.py
cpp/cmake/: sf_voiceConfig.cmake.in
cpp/include/sf_voice/: client.hpp  error.hpp  sf_voice.hpp  types.hpp
deploy/: Caddyfile  bootstrap.sh  deploy-resto-demo.sh  docker-compose.app.yml  docker-compose.caddy.yml
docs/: .atlas-analysis.json  CLAUDE.md  api-tokens.mdx  changelog.mdx  custom.css  data-privacy.mdx  docs.json  how-it-works.mdx  index.mdx  introduction.mdx  quickstart.mdx
docs/changelog/: 2026-05-22.mdx
docs/cn/: api-tokens.mdx  data-privacy.mdx  how-it-works.mdx  introduction.mdx  quickstart.mdx
docs/es/: api-tokens.mdx  data-privacy.mdx  how-it-works.mdx  introduction.mdx  quickstart.mdx
docs/features/: acoustic-indexing.mdx  call-replay.mdx  corpus-search.mdx  defect-signatures.mdx
docs/fr/: api-tokens.mdx  data-privacy.mdx  how-it-works.mdx  introduction.mdx  quickstart.mdx
docs/integrations/: datadog.mdx  livekit.mdx  overview.mdx  pipecat.mdx  telnyx.mdx  twilio.mdx
docs/it/: api-tokens.mdx  data-privacy.mdx  how-it-works.mdx  introduction.mdx  quickstart.mdx
docs/mcp/: ai-debugging.mdx  overview.mdx  setup.mdx
docs/reference/: acoustic-features.mdx  faq.mdx  query-syntax.mdx
docs/sdks/: cpp.mdx  elixir.mdx  go.mdx  java.mdx  kotlin.mdx  overview.mdx  python.mdx  rust.mdx  typescript.mdx
elixir/openrouter_sdk/: .gitignore  mix.exs
elixir/sf_voice/: README.md  mix.exs
elixir/telnyx_webrtc/: mix.exs
fraud-prototype/: .env.example  README.md  tsconfig.json
fraud-prototype/src/: log.ts
fraud-prototype/tests/: heuristics.test.ts
go/: README.md  client.go  errors.go  go.mod  types.go
go-signoz/: MEMORY.md  README.md  cpu_other.go  cpu_unix.go  go.mod  metrics.go  profiler.go  signoz.go  signoz_test.go
go-signoz/example/: main.go
infra/: MEMORY.md  README.md
infra/deploy/: Caddyfile  bootstrap-api.sh  bootstrap-ellie.sh  bootstrap-frontend.sh  bootstrap-mysql.sh  bootstrap-qdrant.sh  bootstrap-redis.sh  bootstrap.sh  compose.preview.yml  compose.prod.yml  deploy-ellie-ai.sh  docker-compose.api.yml  docker-compose.app.yml  docker-compose.ellie.yml  docker-compose.frontend.yml  docker-compose.mysql.yml  docker-compose.qdrant.yml  docker-compose.redis.yml  mysql-backup.sh  sfctl.sh  smoke-vad.py
infra/dev/: README.md  docker-compose.yml  seed-demo.sql
java/: README.md  build.gradle  settings.gradle
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
lib/: resto_booking_app_web.ex
lib/resto_booking_app/: clock.ex  release.ex  reservations.ex
lib/resto_booking_app_web/: router.ex
plan/: fraud-detection-gap-analysis.md  fraud-detection-reference-design.md
python/: README.md  pyproject.toml
python/sf_voice/: __init__.py  _wire.py  async_client.py  client.py  errors.py  models.py
python/tests/: test_client.py
rust/: Cargo.toml  README.md
rust/src/: client.rs  error.rs  lib.rs  types.rs
test/resto_booking_app/: reservations_test.exs
ts/: README.md  package.json  tsconfig.build.json  tsconfig.json
ts/sample/: .env.example  client.ts  config.ts  (+5 more)
ui/: package.json
(+460 files in other folders)
