[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sf-voice-media"
version = "0.1.1"
description = "Python SDK for the sf-voice media API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["sf-voice", "media", "video", "audio", "search", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/sf-voice/sf-voice-core"

[tool.hatch.build.targets.wheel]
packages = ["sf_voice"]
