[package]
name = "sf_model"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for the San Francisco Voice Company API"
license = "MIT"
repository = "https://github.com/sf-voice/sf-voice-core/rust"
keywords = ["media", "video", "audio", "api", "client"]
categories = ["api-bindings", "multimedia"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
