[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sf-voice-mixtape"
version = "0.0.1"
description = "sf-voice media SDK demo — CLI (sync + async)"
requires-python = ">=3.9"
dependencies = [
    "sf-voice-media",
    "python-dotenv>=1.0",
]

[project.scripts]
sf_voice_py = "sf_voice_py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sf_voice_py"]
