# sf-voice inference — model + inference layer. starts as a thin python
# wrapper that mostly calls hosted endpoints; in-process model loading
# comes later if/when latency requires it.
[project]
name = "sf-voice-inference"
version = "0.0.0"
description = "sf-voice model + inference layer"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sf_voice_inference"]
