
[package]
name = "sf-voice-api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sf-voice-api"
path = "src/main.rs"

[dependencies]

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


duckdb = { version = "1", features = ["bundled"] }


# pinned to an exact 2.0 RC — see entities/Cargo.toml for rationale.
sea-orm = { version = "=2.0.0-rc.38", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json", "schema-sync", "entity-registry"] }
entities = { path = "../entities" }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# http client for slack webhook, whisper, diarization, eot-vad. rustls
# to match the rest of the stack.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
# adapt tokio broadcast / sse streams for axum.
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"

# auth: argon2id for passwords, cookies for sessions, random token
# generation, base64 encoding for cookie values. axum-extra's cookie
# builder takes time::Duration so we add the `time` crate directly.
argon2 = "0.5"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
rand = "0.8"
base64 = "0.22"
time = "0.3"

# bucket credentials encryption. xchacha20poly1305 = aead with 24-byte
# nonces so we can use random nonces without birthday-bound concerns.
# urlencoding for cloudformation quickcreate links (template params).
chacha20poly1305 = "0.10"
urlencoding = "2"

# aws sdks for sts:AssumeRole + s3:ListObjects verification on bucket
# save. behavior-version-latest = opt in to current default config.
# default-features off + rustls keeps the runner image small and consistent
# with the rest of the stack.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio", "credentials-process"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-credential-types = "1"
aws-types = "1"


tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
anyhow = "1"
