[package]
name = "bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# bench-load: write a fixed vector set into qdrant + clickhouse + duckdb-vss.
# bench-query: run identical k-NN + filtered k-NN against each, report
# p50/p95/p99 + recall@10. wired up in phase 2; stubs ship in phase 0
# so the workspace + compose surface is reviewable.

[[bin]]
name = "bench-load"
path = "src/bin/load.rs"

[[bin]]
name = "bench-query"
path = "src/bin/query.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
