[package]
name = "entities"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# pinned to an exact 2.0 RC: the schema-sync feature is only in the
# 2.0 line and the API can shift between RCs. bump deliberately.
[dependencies]
sea-orm = { version = "=2.0.0-rc.38", default-features = false, features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json", "schema-sync", "entity-registry"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
